parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASSIGN
    DECREMENT
    END
    ERROR
    FOR
    INCREMENT
    LSHIFT
    PARAMS
    POWER
    RSHIFT
    SWITCH
    THEN
    UNTIL

Grammar

Rule 0     S' -> programa
Rule 1     programa -> MAIN LBRACE lista_declaraciones RBRACE
Rule 2     declaracion -> tipo ID LPAREN parameter_list RPAREN LBRACE lista_declaraciones RBRACE
Rule 3     declaracion -> tipo ID LPAREN RPAREN LBRACE lista_declaraciones RBRACE
Rule 4     expresion -> ID LPAREN argument_list RPAREN
Rule 5     empty -> <empty>
Rule 6     lista_declaraciones -> lista_declaraciones declaracion
Rule 7     lista_declaraciones -> declaracion
Rule 8     case_list -> case_list case
Rule 9     case_list -> case
Rule 10    casos -> casos caso
Rule 11    casos -> caso
Rule 12    casos -> casos DEFAULT COLON LBRACE lista_declaraciones RBRACE
Rule 13    casos -> DEFAULT COLON LBRACE lista_declaraciones RBRACE
Rule 14    caso -> CASE expresion COLON LBRACE lista_declaraciones RBRACE
Rule 15    case -> CASE expresion COLON lista_declaraciones
Rule 16    default_case -> DEFAULT COLON lista_declaraciones
Rule 17    declaracion -> declaracion_variable
Rule 18    declaracion -> sentencia
Rule 19    declaracion -> FUNCTION tipo ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
Rule 20    declaracion -> FUNCTION VOID ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
Rule 21    parameters -> parameter_list
Rule 22    parameters -> empty
Rule 23    parameter_list -> parameter
Rule 24    parameter_list -> parameter_list COMMA parameter
Rule 25    parameter -> tipo ID
Rule 26    expresion -> ID LPAREN arguments RPAREN
Rule 27    arguments -> argument_list
Rule 28    arguments -> empty
Rule 29    argument_list -> expresion
Rule 30    argument_list -> argument_list COMMA expresion
Rule 31    sentencia -> RETURN expresion SEMICOLON
Rule 32    declaracion_variable -> tipo lista_ids SEMICOLON
Rule 33    lista_ids -> ID
Rule 34    lista_ids -> lista_ids COMMA ID
Rule 35    tipo -> INT
Rule 36    tipo -> FLOAT
Rule 37    tipo -> BOOL
Rule 38    tipo -> STRING
Rule 39    sentencia -> asignacion
Rule 40    sentencia -> expresion SEMICOLON
Rule 41    sentencia -> seleccion
Rule 42    sentencia -> iteracion
Rule 43    sentencia -> repeticion
Rule 44    sentencia -> sent_in
Rule 45    sentencia -> sent_out
Rule 46    sentencia -> LBRACE lista_declaraciones RBRACE
Rule 47    asignacion -> ID EQ expresion SEMICOLON
Rule 48    expresion -> expresion OR expresion_and
Rule 49    expresion -> expresion_and
Rule 50    expresion -> STRING_LITERAL
Rule 51    expresion -> NOT expresion
Rule 52    expresion_and -> expresion_and AND expresion_rel
Rule 53    expresion_and -> expresion_rel
Rule 54    expresion_rel -> expresion_rel relacion expresion_add
Rule 55    expresion_rel -> expresion_add
Rule 56    relacion -> LT
Rule 57    relacion -> LE
Rule 58    relacion -> GT
Rule 59    relacion -> GE
Rule 60    relacion -> EEQ
Rule 61    relacion -> NE
Rule 62    expresion_add -> expresion_add suma termino
Rule 63    expresion_add -> termino
Rule 64    suma -> PLUS
Rule 65    suma -> MIN
Rule 66    termino -> termino mult factor
Rule 67    termino -> factor
Rule 68    mult -> TIMES
Rule 69    mult -> DIVIDE
Rule 70    mult -> MODULO
Rule 71    factor -> componente
Rule 72    factor -> MIN factor
Rule 73    componente -> ID
Rule 74    componente -> numero
Rule 75    componente -> booleano
Rule 76    componente -> STRING_LITERAL
Rule 77    componente -> LPAREN expresion RPAREN
Rule 78    numero -> NUMBER
Rule 79    numero -> REAL
Rule 80    booleano -> TRUE
Rule 81    booleano -> FALSE
Rule 82    seleccion -> IF LPAREN expresion RPAREN sentencia
Rule 83    seleccion -> IF LPAREN expresion RPAREN sentencia ELSE sentencia
Rule 84    iteracion -> WHILE LPAREN expresion RPAREN sentencia
Rule 85    repeticion -> DO sentencia WHILE LPAREN expresion RPAREN SEMICOLON
Rule 86    sent_in -> CIN OP_IN ID SEMICOLON
Rule 87    sent_out -> COUT OP_OUT expresion SEMICOLON

Terminals, with rules where they appear

AND                  : 52
ASSIGN               : 
BOOL                 : 37
CASE                 : 14 15
CIN                  : 86
COLON                : 12 13 14 15 16
COMMA                : 24 30 34
COUT                 : 87
DECREMENT            : 
DEFAULT              : 12 13 16
DIVIDE               : 69
DO                   : 85
EEQ                  : 60
ELSE                 : 83
END                  : 
EQ                   : 47
ERROR                : 
FALSE                : 81
FLOAT                : 36
FOR                  : 
FUNCTION             : 19 20
GE                   : 59
GT                   : 58
ID                   : 2 3 4 19 20 25 26 33 34 47 73 86
IF                   : 82 83
INCREMENT            : 
INT                  : 35
LBRACE               : 1 2 3 12 13 14 19 20 46
LE                   : 57
LPAREN               : 2 3 4 19 20 26 77 82 83 84 85
LSHIFT               : 
LT                   : 56
MAIN                 : 1
MIN                  : 65 72
MODULO               : 70
NE                   : 61
NOT                  : 51
NUMBER               : 78
OP_IN                : 86
OP_OUT               : 87
OR                   : 48
PARAMS               : 
PLUS                 : 64
POWER                : 
RBRACE               : 1 2 3 12 13 14 19 20 46
REAL                 : 79
RETURN               : 31
RPAREN               : 2 3 4 19 20 26 77 82 83 84 85
RSHIFT               : 
SEMICOLON            : 31 32 40 47 85 86 87
STRING               : 38
STRING_LITERAL       : 50 76
SWITCH               : 
THEN                 : 
TIMES                : 68
TRUE                 : 80
UNTIL                : 
VOID                 : 20
WHILE                : 84 85
error                : 

Nonterminals, with rules where they appear

argument_list        : 4 27 30
arguments            : 26
asignacion           : 39
booleano             : 75
case                 : 8 9
case_list            : 8
caso                 : 10 11
casos                : 10 12
componente           : 71
declaracion          : 6 7
declaracion_variable : 17
default_case         : 
empty                : 22 28
expresion            : 14 15 29 30 31 40 47 48 51 77 82 83 84 85 87
expresion_add        : 54 55 62
expresion_and        : 48 49 52
expresion_rel        : 52 53 54
factor               : 66 67 72
iteracion            : 42
lista_declaraciones  : 1 2 3 6 12 13 14 15 16 19 20 46
lista_ids            : 32 34
mult                 : 66
numero               : 74
parameter            : 23 24
parameter_list       : 2 21 24
parameters           : 19 20
programa             : 0
relacion             : 54
repeticion           : 43
seleccion            : 41
sent_in              : 44
sent_out             : 45
sentencia            : 18 82 83 83 84 85
suma                 : 62
termino              : 62 63 66
tipo                 : 2 3 19 25 32

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . MAIN LBRACE lista_declaraciones RBRACE

    MAIN            shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> MAIN . LBRACE lista_declaraciones RBRACE

    LBRACE          shift and go to state 3


state 3

    (1) programa -> MAIN LBRACE . lista_declaraciones RBRACE
    (6) lista_declaraciones -> . lista_declaraciones declaracion
    (7) lista_declaraciones -> . declaracion
    (2) declaracion -> . tipo ID LPAREN parameter_list RPAREN LBRACE lista_declaraciones RBRACE
    (3) declaracion -> . tipo ID LPAREN RPAREN LBRACE lista_declaraciones RBRACE
    (17) declaracion -> . declaracion_variable
    (18) declaracion -> . sentencia
    (19) declaracion -> . FUNCTION tipo ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
    (20) declaracion -> . FUNCTION VOID ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING
    (32) declaracion_variable -> . tipo lista_ids SEMICOLON
    (31) sentencia -> . RETURN expresion SEMICOLON
    (39) sentencia -> . asignacion
    (40) sentencia -> . expresion SEMICOLON
    (41) sentencia -> . seleccion
    (42) sentencia -> . iteracion
    (43) sentencia -> . repeticion
    (44) sentencia -> . sent_in
    (45) sentencia -> . sent_out
    (46) sentencia -> . LBRACE lista_declaraciones RBRACE
    (47) asignacion -> . ID EQ expresion SEMICOLON
    (4) expresion -> . ID LPAREN argument_list RPAREN
    (26) expresion -> . ID LPAREN arguments RPAREN
    (48) expresion -> . expresion OR expresion_and
    (49) expresion -> . expresion_and
    (50) expresion -> . STRING_LITERAL
    (51) expresion -> . NOT expresion
    (82) seleccion -> . IF LPAREN expresion RPAREN sentencia
    (83) seleccion -> . IF LPAREN expresion RPAREN sentencia ELSE sentencia
    (84) iteracion -> . WHILE LPAREN expresion RPAREN sentencia
    (85) repeticion -> . DO sentencia WHILE LPAREN expresion RPAREN SEMICOLON
    (86) sent_in -> . CIN OP_IN ID SEMICOLON
    (87) sent_out -> . COUT OP_OUT expresion SEMICOLON
    (52) expresion_and -> . expresion_and AND expresion_rel
    (53) expresion_and -> . expresion_rel
    (54) expresion_rel -> . expresion_rel relacion expresion_add
    (55) expresion_rel -> . expresion_add
    (62) expresion_add -> . expresion_add suma termino
    (63) expresion_add -> . termino
    (66) termino -> . termino mult factor
    (67) termino -> . factor
    (71) factor -> . componente
    (72) factor -> . MIN factor
    (73) componente -> . ID
    (74) componente -> . numero
    (75) componente -> . booleano
    (76) componente -> . STRING_LITERAL
    (77) componente -> . LPAREN expresion RPAREN
    (78) numero -> . NUMBER
    (79) numero -> . REAL
    (80) booleano -> . TRUE
    (81) booleano -> . FALSE

    FUNCTION        shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    STRING          shift and go to state 16
    RETURN          shift and go to state 17
    LBRACE          shift and go to state 4
    ID              shift and go to state 8
    STRING_LITERAL  shift and go to state 26
    NOT             shift and go to state 27
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    DO              shift and go to state 30
    CIN             shift and go to state 31
    COUT            shift and go to state 32
    MIN             shift and go to state 38
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 41
    REAL            shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    lista_declaraciones            shift and go to state 5
    declaracion                    shift and go to state 6
    tipo                           shift and go to state 7
    declaracion_variable           shift and go to state 10
    sentencia                      shift and go to state 11
    expresion                      shift and go to state 18
    asignacion                     shift and go to state 19
    seleccion                      shift and go to state 20
    iteracion                      shift and go to state 21
    repeticion                     shift and go to state 22
    sent_in                        shift and go to state 23
    sent_out                       shift and go to state 24
    expresion_and                  shift and go to state 25
    expresion_rel                  shift and go to state 33
    expresion_add                  shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 36
    componente                     shift and go to state 37
    numero                         shift and go to state 39
    booleano                       shift and go to state 40

state 4

    (46) sentencia -> LBRACE . lista_declaraciones RBRACE
    (6) lista_declaraciones -> . lista_declaraciones declaracion
    (7) lista_declaraciones -> . declaracion
    (2) declaracion -> . tipo ID LPAREN parameter_list RPAREN LBRACE lista_declaraciones RBRACE
    (3) declaracion -> . tipo ID LPAREN RPAREN LBRACE lista_declaraciones RBRACE
    (17) declaracion -> . declaracion_variable
    (18) declaracion -> . sentencia
    (19) declaracion -> . FUNCTION tipo ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
    (20) declaracion -> . FUNCTION VOID ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING
    (32) declaracion_variable -> . tipo lista_ids SEMICOLON
    (31) sentencia -> . RETURN expresion SEMICOLON
    (39) sentencia -> . asignacion
    (40) sentencia -> . expresion SEMICOLON
    (41) sentencia -> . seleccion
    (42) sentencia -> . iteracion
    (43) sentencia -> . repeticion
    (44) sentencia -> . sent_in
    (45) sentencia -> . sent_out
    (46) sentencia -> . LBRACE lista_declaraciones RBRACE
    (47) asignacion -> . ID EQ expresion SEMICOLON
    (4) expresion -> . ID LPAREN argument_list RPAREN
    (26) expresion -> . ID LPAREN arguments RPAREN
    (48) expresion -> . expresion OR expresion_and
    (49) expresion -> . expresion_and
    (50) expresion -> . STRING_LITERAL
    (51) expresion -> . NOT expresion
    (82) seleccion -> . IF LPAREN expresion RPAREN sentencia
    (83) seleccion -> . IF LPAREN expresion RPAREN sentencia ELSE sentencia
    (84) iteracion -> . WHILE LPAREN expresion RPAREN sentencia
    (85) repeticion -> . DO sentencia WHILE LPAREN expresion RPAREN SEMICOLON
    (86) sent_in -> . CIN OP_IN ID SEMICOLON
    (87) sent_out -> . COUT OP_OUT expresion SEMICOLON
    (52) expresion_and -> . expresion_and AND expresion_rel
    (53) expresion_and -> . expresion_rel
    (54) expresion_rel -> . expresion_rel relacion expresion_add
    (55) expresion_rel -> . expresion_add
    (62) expresion_add -> . expresion_add suma termino
    (63) expresion_add -> . termino
    (66) termino -> . termino mult factor
    (67) termino -> . factor
    (71) factor -> . componente
    (72) factor -> . MIN factor
    (73) componente -> . ID
    (74) componente -> . numero
    (75) componente -> . booleano
    (76) componente -> . STRING_LITERAL
    (77) componente -> . LPAREN expresion RPAREN
    (78) numero -> . NUMBER
    (79) numero -> . REAL
    (80) booleano -> . TRUE
    (81) booleano -> . FALSE

    FUNCTION        shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    STRING          shift and go to state 16
    RETURN          shift and go to state 17
    LBRACE          shift and go to state 4
    ID              shift and go to state 8
    STRING_LITERAL  shift and go to state 26
    NOT             shift and go to state 27
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    DO              shift and go to state 30
    CIN             shift and go to state 31
    COUT            shift and go to state 32
    MIN             shift and go to state 38
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 41
    REAL            shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    lista_declaraciones            shift and go to state 45
    declaracion                    shift and go to state 6
    tipo                           shift and go to state 7
    declaracion_variable           shift and go to state 10
    sentencia                      shift and go to state 11
    expresion                      shift and go to state 18
    asignacion                     shift and go to state 19
    seleccion                      shift and go to state 20
    iteracion                      shift and go to state 21
    repeticion                     shift and go to state 22
    sent_in                        shift and go to state 23
    sent_out                       shift and go to state 24
    expresion_and                  shift and go to state 25
    expresion_rel                  shift and go to state 33
    expresion_add                  shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 36
    componente                     shift and go to state 37
    numero                         shift and go to state 39
    booleano                       shift and go to state 40

state 5

    (1) programa -> MAIN LBRACE lista_declaraciones . RBRACE
    (6) lista_declaraciones -> lista_declaraciones . declaracion
    (2) declaracion -> . tipo ID LPAREN parameter_list RPAREN LBRACE lista_declaraciones RBRACE
    (3) declaracion -> . tipo ID LPAREN RPAREN LBRACE lista_declaraciones RBRACE
    (17) declaracion -> . declaracion_variable
    (18) declaracion -> . sentencia
    (19) declaracion -> . FUNCTION tipo ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
    (20) declaracion -> . FUNCTION VOID ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING
    (32) declaracion_variable -> . tipo lista_ids SEMICOLON
    (31) sentencia -> . RETURN expresion SEMICOLON
    (39) sentencia -> . asignacion
    (40) sentencia -> . expresion SEMICOLON
    (41) sentencia -> . seleccion
    (42) sentencia -> . iteracion
    (43) sentencia -> . repeticion
    (44) sentencia -> . sent_in
    (45) sentencia -> . sent_out
    (46) sentencia -> . LBRACE lista_declaraciones RBRACE
    (47) asignacion -> . ID EQ expresion SEMICOLON
    (4) expresion -> . ID LPAREN argument_list RPAREN
    (26) expresion -> . ID LPAREN arguments RPAREN
    (48) expresion -> . expresion OR expresion_and
    (49) expresion -> . expresion_and
    (50) expresion -> . STRING_LITERAL
    (51) expresion -> . NOT expresion
    (82) seleccion -> . IF LPAREN expresion RPAREN sentencia
    (83) seleccion -> . IF LPAREN expresion RPAREN sentencia ELSE sentencia
    (84) iteracion -> . WHILE LPAREN expresion RPAREN sentencia
    (85) repeticion -> . DO sentencia WHILE LPAREN expresion RPAREN SEMICOLON
    (86) sent_in -> . CIN OP_IN ID SEMICOLON
    (87) sent_out -> . COUT OP_OUT expresion SEMICOLON
    (52) expresion_and -> . expresion_and AND expresion_rel
    (53) expresion_and -> . expresion_rel
    (54) expresion_rel -> . expresion_rel relacion expresion_add
    (55) expresion_rel -> . expresion_add
    (62) expresion_add -> . expresion_add suma termino
    (63) expresion_add -> . termino
    (66) termino -> . termino mult factor
    (67) termino -> . factor
    (71) factor -> . componente
    (72) factor -> . MIN factor
    (73) componente -> . ID
    (74) componente -> . numero
    (75) componente -> . booleano
    (76) componente -> . STRING_LITERAL
    (77) componente -> . LPAREN expresion RPAREN
    (78) numero -> . NUMBER
    (79) numero -> . REAL
    (80) booleano -> . TRUE
    (81) booleano -> . FALSE

    RBRACE          shift and go to state 46
    FUNCTION        shift and go to state 12
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    STRING          shift and go to state 16
    RETURN          shift and go to state 17
    LBRACE          shift and go to state 4
    ID              shift and go to state 8
    STRING_LITERAL  shift and go to state 26
    NOT             shift and go to state 27
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    DO              shift and go to state 30
    CIN             shift and go to state 31
    COUT            shift and go to state 32
    MIN             shift and go to state 38
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 41
    REAL            shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    declaracion                    shift and go to state 47
    tipo                           shift and go to state 7
    declaracion_variable           shift and go to state 10
    sentencia                      shift and go to state 11
    expresion                      shift and go to state 18
    asignacion                     shift and go to state 19
    seleccion                      shift and go to state 20
    iteracion                      shift and go to state 21
    repeticion                     shift and go to state 22
    sent_in                        shift and go to state 23
    sent_out                       shift and go to state 24
    expresion_and                  shift and go to state 25
    expresion_rel                  shift and go to state 33
    expresion_add                  shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 36
    componente                     shift and go to state 37
    numero                         shift and go to state 39
    booleano                       shift and go to state 40

state 6

    (7) lista_declaraciones -> declaracion .

    RBRACE          reduce using rule 7 (lista_declaraciones -> declaracion .)
    FUNCTION        reduce using rule 7 (lista_declaraciones -> declaracion .)
    INT             reduce using rule 7 (lista_declaraciones -> declaracion .)
    FLOAT           reduce using rule 7 (lista_declaraciones -> declaracion .)
    BOOL            reduce using rule 7 (lista_declaraciones -> declaracion .)
    STRING          reduce using rule 7 (lista_declaraciones -> declaracion .)
    RETURN          reduce using rule 7 (lista_declaraciones -> declaracion .)
    LBRACE          reduce using rule 7 (lista_declaraciones -> declaracion .)
    ID              reduce using rule 7 (lista_declaraciones -> declaracion .)
    STRING_LITERAL  reduce using rule 7 (lista_declaraciones -> declaracion .)
    NOT             reduce using rule 7 (lista_declaraciones -> declaracion .)
    IF              reduce using rule 7 (lista_declaraciones -> declaracion .)
    WHILE           reduce using rule 7 (lista_declaraciones -> declaracion .)
    DO              reduce using rule 7 (lista_declaraciones -> declaracion .)
    CIN             reduce using rule 7 (lista_declaraciones -> declaracion .)
    COUT            reduce using rule 7 (lista_declaraciones -> declaracion .)
    MIN             reduce using rule 7 (lista_declaraciones -> declaracion .)
    LPAREN          reduce using rule 7 (lista_declaraciones -> declaracion .)
    NUMBER          reduce using rule 7 (lista_declaraciones -> declaracion .)
    REAL            reduce using rule 7 (lista_declaraciones -> declaracion .)
    TRUE            reduce using rule 7 (lista_declaraciones -> declaracion .)
    FALSE           reduce using rule 7 (lista_declaraciones -> declaracion .)


state 7

    (2) declaracion -> tipo . ID LPAREN parameter_list RPAREN LBRACE lista_declaraciones RBRACE
    (3) declaracion -> tipo . ID LPAREN RPAREN LBRACE lista_declaraciones RBRACE
    (32) declaracion_variable -> tipo . lista_ids SEMICOLON
    (33) lista_ids -> . ID
    (34) lista_ids -> . lista_ids COMMA ID

    ID              shift and go to state 48

    lista_ids                      shift and go to state 49

state 8

    (47) asignacion -> ID . EQ expresion SEMICOLON
    (4) expresion -> ID . LPAREN argument_list RPAREN
    (26) expresion -> ID . LPAREN arguments RPAREN
    (73) componente -> ID .

    EQ              shift and go to state 50
    LPAREN          shift and go to state 51
    TIMES           reduce using rule 73 (componente -> ID .)
    DIVIDE          reduce using rule 73 (componente -> ID .)
    MODULO          reduce using rule 73 (componente -> ID .)
    PLUS            reduce using rule 73 (componente -> ID .)
    MIN             reduce using rule 73 (componente -> ID .)
    LT              reduce using rule 73 (componente -> ID .)
    LE              reduce using rule 73 (componente -> ID .)
    GT              reduce using rule 73 (componente -> ID .)
    GE              reduce using rule 73 (componente -> ID .)
    EEQ             reduce using rule 73 (componente -> ID .)
    NE              reduce using rule 73 (componente -> ID .)
    AND             reduce using rule 73 (componente -> ID .)
    SEMICOLON       reduce using rule 73 (componente -> ID .)
    OR              reduce using rule 73 (componente -> ID .)


state 9

    (77) componente -> LPAREN . expresion RPAREN
    (4) expresion -> . ID LPAREN argument_list RPAREN
    (26) expresion -> . ID LPAREN arguments RPAREN
    (48) expresion -> . expresion OR expresion_and
    (49) expresion -> . expresion_and
    (50) expresion -> . STRING_LITERAL
    (51) expresion -> . NOT expresion
    (52) expresion_and -> . expresion_and AND expresion_rel
    (53) expresion_and -> . expresion_rel
    (54) expresion_rel -> . expresion_rel relacion expresion_add
    (55) expresion_rel -> . expresion_add
    (62) expresion_add -> . expresion_add suma termino
    (63) expresion_add -> . termino
    (66) termino -> . termino mult factor
    (67) termino -> . factor
    (71) factor -> . componente
    (72) factor -> . MIN factor
    (73) componente -> . ID
    (74) componente -> . numero
    (75) componente -> . booleano
    (76) componente -> . STRING_LITERAL
    (77) componente -> . LPAREN expresion RPAREN
    (78) numero -> . NUMBER
    (79) numero -> . REAL
    (80) booleano -> . TRUE
    (81) booleano -> . FALSE

    ID              shift and go to state 53
    STRING_LITERAL  shift and go to state 26
    NOT             shift and go to state 27
    MIN             shift and go to state 38
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 41
    REAL            shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    expresion                      shift and go to state 52
    expresion_and                  shift and go to state 25
    expresion_rel                  shift and go to state 33
    expresion_add                  shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 36
    componente                     shift and go to state 37
    numero                         shift and go to state 39
    booleano                       shift and go to state 40

state 10

    (17) declaracion -> declaracion_variable .

    RBRACE          reduce using rule 17 (declaracion -> declaracion_variable .)
    FUNCTION        reduce using rule 17 (declaracion -> declaracion_variable .)
    INT             reduce using rule 17 (declaracion -> declaracion_variable .)
    FLOAT           reduce using rule 17 (declaracion -> declaracion_variable .)
    BOOL            reduce using rule 17 (declaracion -> declaracion_variable .)
    STRING          reduce using rule 17 (declaracion -> declaracion_variable .)
    RETURN          reduce using rule 17 (declaracion -> declaracion_variable .)
    LBRACE          reduce using rule 17 (declaracion -> declaracion_variable .)
    ID              reduce using rule 17 (declaracion -> declaracion_variable .)
    STRING_LITERAL  reduce using rule 17 (declaracion -> declaracion_variable .)
    NOT             reduce using rule 17 (declaracion -> declaracion_variable .)
    IF              reduce using rule 17 (declaracion -> declaracion_variable .)
    WHILE           reduce using rule 17 (declaracion -> declaracion_variable .)
    DO              reduce using rule 17 (declaracion -> declaracion_variable .)
    CIN             reduce using rule 17 (declaracion -> declaracion_variable .)
    COUT            reduce using rule 17 (declaracion -> declaracion_variable .)
    MIN             reduce using rule 17 (declaracion -> declaracion_variable .)
    LPAREN          reduce using rule 17 (declaracion -> declaracion_variable .)
    NUMBER          reduce using rule 17 (declaracion -> declaracion_variable .)
    REAL            reduce using rule 17 (declaracion -> declaracion_variable .)
    TRUE            reduce using rule 17 (declaracion -> declaracion_variable .)
    FALSE           reduce using rule 17 (declaracion -> declaracion_variable .)


state 11

    (18) declaracion -> sentencia .

    RBRACE          reduce using rule 18 (declaracion -> sentencia .)
    FUNCTION        reduce using rule 18 (declaracion -> sentencia .)
    INT             reduce using rule 18 (declaracion -> sentencia .)
    FLOAT           reduce using rule 18 (declaracion -> sentencia .)
    BOOL            reduce using rule 18 (declaracion -> sentencia .)
    STRING          reduce using rule 18 (declaracion -> sentencia .)
    RETURN          reduce using rule 18 (declaracion -> sentencia .)
    LBRACE          reduce using rule 18 (declaracion -> sentencia .)
    ID              reduce using rule 18 (declaracion -> sentencia .)
    STRING_LITERAL  reduce using rule 18 (declaracion -> sentencia .)
    NOT             reduce using rule 18 (declaracion -> sentencia .)
    IF              reduce using rule 18 (declaracion -> sentencia .)
    WHILE           reduce using rule 18 (declaracion -> sentencia .)
    DO              reduce using rule 18 (declaracion -> sentencia .)
    CIN             reduce using rule 18 (declaracion -> sentencia .)
    COUT            reduce using rule 18 (declaracion -> sentencia .)
    MIN             reduce using rule 18 (declaracion -> sentencia .)
    LPAREN          reduce using rule 18 (declaracion -> sentencia .)
    NUMBER          reduce using rule 18 (declaracion -> sentencia .)
    REAL            reduce using rule 18 (declaracion -> sentencia .)
    TRUE            reduce using rule 18 (declaracion -> sentencia .)
    FALSE           reduce using rule 18 (declaracion -> sentencia .)


state 12

    (19) declaracion -> FUNCTION . tipo ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
    (20) declaracion -> FUNCTION . VOID ID LPAREN parameters RPAREN LBRACE lista_declaraciones RBRACE
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING

    VOID            shift and go to state 55
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    STRING          shift and go to state 16

    tipo                           shift and go to state 54

state 13

    (35) tipo -> INT .

    ID              reduce using rule 35 (tipo -> INT .)


state 14

    (36) tipo -> FLOAT .

    ID              reduce using rule 36 (tipo -> FLOAT .)


state 15

    (37) tipo -> BOOL .

    ID              reduce using rule 37 (tipo -> BOOL .)


state 16

    (38) tipo -> STRING .

    ID              reduce using rule 38 (tipo -> STRING .)


state 17

    (31) sentencia -> RETURN . expresion SEMICOLON
    (4) expresion -> . ID LPAREN argument_list RPAREN
    (26) expresion -> . ID LPAREN arguments RPAREN
    (48) expresion -> . expresion OR expresion_and
    (49) expresion -> . expresion_and
    (50) expresion -> . STRING_LITERAL
    (51) expresion -> . NOT expresion
    (52) expresion_and -> . expresion_and AND expresion_rel
    (53) expresion_and -> . expresion_rel
    (54) expresion_rel -> . expresion_rel relacion expresion_add
    (55) expresion_rel -> . expresion_add
    (62) expresion_add -> . expresion_add suma termino
    (63) expresion_add -> . termino
    (66) termino -> . termino mult factor
    (67) termino -> . factor
    (71) factor -> . componente
    (72) factor -> . MIN factor
    (73) componente -> . ID
    (74) componente -> . numero
    (75) componente -> . booleano
    (76) componente -> . STRING_LITERAL
    (77) componente -> . LPAREN expresion RPAREN
    (78) numero -> . NUMBER
    (79) numero -> . REAL
    (80) booleano -> . TRUE
    (81) booleano -> . FALSE

    ID              shift and go to state 53
    STRING_LITERAL  shift and go to state 26
    NOT             shift and go to state 27
    MIN             shift and go to state 38
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 41
    REAL            shift and go to state 42
    TRUE            shift and go to state 43
    FALSE           shift and go to state 44

    expresion                      shift and go to state 56
    expresion_and                  shift and go to state 25
    expresion_rel                  shift and go to state 33
    expresion_add                  shift and go to state 34
    termino                        shift and go to state 35
    factor                         shift and go to state 36
    componente                     shift and go to state 37
    numero                         shift and go to state 39
    booleano                       shift and go to state 40

state 18

    (40) sentencia -> expresion . SEMICOLON
    (48) expresion -> expresion . OR expresion_and

    SEMICOLON       shift and go to state 57
    OR              shift and go to state 58


state 19

    (39) sentencia -> asignacion .

    RBRACE          reduce using rule 39 (sentencia -> asignacion .)
    FUNCTION        reduce using rule 39 (sentencia -> asignacion .)
    INT             reduce using rule 39 (sentencia -> asignacion .)
    FLOAT           reduce using rule 39 (sentencia -> asignacion .)
    BOOL            reduce using rule 39 (sentencia -> asignacion .)
    STRING          reduce using rule 39 (sentencia -> asignacion .)
    RETURN          reduce using rule 39 (sentencia -> asignacion .)
    LBRACE          reduce using rule 39 (sentencia -> asignacion .)
    ID              reduce using rule 39 (sentencia -> asignacion .)
    STRING_LITERAL  reduce using rule 39 (sentencia -> asignacion .)
    NOT             reduce using rule 39 (sentencia -> asignacion .)
    IF              reduce using rule 39 (sentencia -> asignacion .)
    WHILE           reduce using rule 39 (sentencia -> asignacion .)
    DO              reduce using rule 39 (sentencia -> asignacion .)
    CIN             reduce using rule 39 (sentencia -> asignacion .)
    COUT            reduce using rule 39 (sentencia -> asignacion .)
    MIN             reduce using rule 39 (sentencia -> asignacion .)
    LPAREN          reduce using rule 39 (sentencia -> asignacion .)
    NUMBER          reduce using rule 39 (sentencia -> asignacion .)
    REAL            reduce using rule 39 (sentencia -> asignacion .)
    TRUE            reduce using rule 39 (sentencia -> asignacion .)
    FALSE           reduce using rule 39 (sentencia -> asignacion .)
    ELSE            reduce using rule 39 (sentencia -> asignacion .)


state 20

    (41) sentencia -> seleccion .

